fixed the product block from appearning behind the nav

--- a/Certificaton Project - Product Landing Page/styles.css
+++ b/Certificaton Project - Product Landing Page/styles.css
@@ -17,6 +17,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: black;
     
 }
 
@@ -44,6 +45,7 @@ li {
 
 .product-block {
     display: block;
+    margin: 75px;
 }
 
 h1 {
